# ESPB

./: CMakeLists.txt  README.md  readmi.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/espb/: CMakeLists.txt  Kconfig  LICENSE  README.md
components/espb/include/: espb_api.h  espb_callback_system.h  espb_exec_memory.h  espb_fast_symbols.h  espb_heap_manager.h  espb_host_symbols.h  espb_interpreter.h  espb_interpreter_common_types.h  espb_interpreter_parser.h  espb_interpreter_reader.h  espb_interpreter_runtime.h  espb_interpreter_runtime_oc.h  espb_jit.h  espb_jit_dispatcher.h  espb_jit_globals.h  espb_jit_helpers.h  espb_jit_import_call.h  espb_jit_indirect_ptr.h  espb_jit_precompile.h  espb_runtime_alloca.h  espb_runtime_call_import_basic.h  espb_runtime_ffi_call.h  espb_runtime_ffi_pack.h  espb_runtime_ffi_types.h  espb_runtime_oc_debug.h  ffi_freertos.h  safe_memory.h
components/espb/src/: espb_api.c  espb_callback_system.c  espb_cpp_symbols.cpp  espb_exec_memory.c  espb_heap_manager.c  espb_host_symbols.c  espb_interpreter_parser.c  espb_interpreter_reader.c  espb_interpreter_runtime.c  espb_interpreter_runtime_oc.c  espb_jit_cache.c  espb_jit_dispatcher.c  espb_jit_globals.c  espb_jit_helpers.c  espb_jit_import_call.c  espb_jit_indirect_ptr.c  espb_jit_precompile.c  espb_runtime_alloca.c  espb_runtime_call_import_basic.c  espb_runtime_ffi_call.c  espb_runtime_ffi_pack.c  espb_runtime_ffi_types.c  ffi_freertos.c  iram_pool_wrapper.c
components/espb/src/arch/: jit_riscv.c  jit_xtensa.c  jit_xtensa_inline.c
components/espb/symbols/: idf_fast.sym
components/libffi/: CMakeLists.txt  Kconfig  LICENSE  LICENSE-libffi.txt
components/libffi/include/: ffi.h  ffi.h.in  ffi.h.old  ffi_cfi.h  ffi_common.h  fficonfig.h  ffitarget.h.bak  iram_pool.h  tramp.h
components/libffi/src/common/: closures.c  iram_pool.c  prep_cif.c  raw_api.c  tramp.c  types.c
components/libffi/src/riscv/: ffi.c  ffi_esp.c  ffitarget.h  ffitarget_esp.h  sysv.S  sysv_esp.S
components/libffi/src/xtensa/: ffi.c  ffitarget.h  sysv.S
main/: CMakeLists.txt  Kconfig  config.env  kconfigs.in  kconfigs_projbuild.in  main.cpp  test.espb
main/symbols/: custom_fast.sym
